--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
 h2 {
-  clear: left;
+  clear:left;
+}
+.dice {
+  float: left;
+  border: solid;
+  text-align: center;
+  width: 35px;
+  margin: 5px;
 }
